Removed email to a friend and fixed spacing between pricing and add to cart

--- a/skin/frontend/default/mag-test/css/styles.css
+++ b/skin/frontend/default/mag-test/css/styles.css
@@ -713,6 +713,7 @@ body{
   color: rgb(228, 190, 75);
   float: left;
   margin-top: 32px;
+  margin-bottom: 38px;
 }
 
 .other-prices {
